# break_ecc

./: pyproject.toml  test_ecc_step1.py  test_ecc_step2.py  test_ecc_step3.py  test_ecc_step4.py  test_ecc_step5.py  test_ecc_step6.py  test_ecc_step7.py  test_ecc_step8.py  test_ecc_step9.py  test_modular_ops.py
data/: phase1_benchmark_results.csv
experiments/: benchmark_scalling.py  verify_baseline_p13.py  verify_qday_small.py
paper/: main.aux  main.out  main.tex
src/: arithmetic.py  dev.ipynb  ecc.py  ecc_point_addition_jacobian.py  identify_parameter.py  mixed_point_addition.py  modular_adder.py  modular_arithmetic.py  montgomery_ladder.py  qday_compiler.py  quantum_ecc_cracker.py  verify_qday.py  verify_qday_small.py
src/general/: ecc.py  postprocessing.py  shor_ecdlp.py
src/matome/: modular_adder.py  modular_maultiplier.py  modular_square.py  modular_substructor.py
src/notebook/: dev2.ipynb  dev3.ipynb  modular_square.ipynb  tanjent_line.ipynb
test/: test_ecc_step1.py  test_ecc_step2.py  test_ecc_step3.py  test_ecc_step4.py  test_ecc_step5.py  test_ecc_step6.py  test_ecc_step7.py  test_ecc_step8.py  test_ecc_step9.py  test_modular_ops.py  test_squre.py
