[project]
name = "break-ecc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pylatexenc>=2.10",
    "qiskit>=2.2.3",
    "qiskit-aer>=0.17.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
